--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vyants/yii2-daemon",
+    "name": "kfosoft/yii2-daemon",
     "description": "Extension provides functionality for simple daemons creation and control",
     "type": "yii2-extension",
     "keywords": ["yii2","extension", "daemon"],
@@ -8,16 +8,22 @@
         {
             "name": "Vladimir Yants",
             "email": "vladimir.yants@gmail.com"
+        },
+        {
+            "name": "Kyrylo Checherskyi",
+            "email": "kyrylo.checherskyi@gmail.com"
         }
     ],
     "require": {
-        "yiisoft/yii2": "*",
+        "php": ">=7.2",
+        "yiisoft/yii2": ">=2.0.34",
         "ext-pcntl": "*",
+        "ext-json": "*",
         "ext-posix": "*"
     },
     "autoload": {
         "psr-4": {
-            "vyants\\daemon\\": ""
+            "kfosoft\\daemon\\": ""
         }
     }
 }
